09/13/2025:
[+] Added Ragdoll Archers (Thanks for the suggestion Kaden!)
[+] Re-added There is No Game
[+] Fixed the Soccer Random image being Snailbob 5.
[+] Emulated Games are here! Please don't sue me!
[+] Added Super Mario 64 [N64]
[+] Added Mario Kart 64 [N64]
[+] Added Doom 64 [N64]
[+] Added Super Smash Bros [N64]
[+] Added Pokemon Stadium [N64]
[+] Added Street Fighter II Turbo [SNES]
[+] Added Welcome to Animal Crossing: Wild World [GBA]
[!] Please suggest any emulated games you'd like to see next on the suggestions
form! Suggestions are greatly appreciated :)

09/12/2025:
[+] Added Funny Shooter 2 (Thanks for the suggestion!)

09/10/2025:
[!] Sorry for all the broken games. A lot of the games broke during the time
I was gone. I have fixed most of them though.
[+] Fixed Duck Life 1-4
[+] Fixed Ace Gangster Taxi
[+] Fixed Bad Ice Cream
[+] Fixed Pac Man
[+] Fixed Bad Time Simulator
[+] Fixed Bloons Tower Defense 1 & 3
[+] Fixed Bob the Robber 2
[+] Fixed Bottle Flip
[-] Removed Chick End (Couldn't find a backup sorry)
[-] Removed Cookie Clicker
[+] Fixed Fly or Die
[+] Fixed a bunch of other games, not gonna list them all

09/09/2025:
[+] Big update to the UI.
[+] Added categories (will do more with this later)
[-] Removed tab styles (these weren't used and have been broken forever)
[+] Added Subway Surfers (This took forever to get done. I finally did it)
[+] Fixed most flash games that used waflash before. They've all been
converted to Ruffle and should launch fine. (Submit a bug report if a game
doesn't load still)
[!] *MAYBE* there will be more Poki, CrazyGames, and maybe CoolMathGames
exclusives very soon. Poki SDK has been mostly cracked, but I'll look into
cracking the others.

09/05/2025:
[!] Hi everyone! I know it's been a while but I'm back! I'll try my best to
update this as frequently as before.
[+] Added Drive Mad (Thanks for the suggestion)
[+] Fixed Block Blast (Thanks for the bug report Joe)

05/09/2025: