@@ -877,14 +877,14 @@
         "img": "sf2t.jpg"
     },
     "Mega Man X [SNES EMULATED]": {
-        "url": "https://cdn.jsdelivr.net/gh/brooklynruff/d@main/emulation/files/n64/mmx.xml",
+        "url": "https://cdn.jsdelivr.net/gh/brooklynruff/d@main/emulation/files/snes/mmx.xml",
         "img": "mmx.jpg"
     },
     "Welcome to Animal Crossing: Wild World [NDS EMULATED]": {
         "url": "https://cdn.jsdelivr.net/gh/brooklynruff/d@main/emulation/files/nds/acww_3.xml",
         "img": "animalcrossing.jpg"
     },
-    "Lego Star Wars: The Video Game [NDS EMULATED]": {
+    "Lego Star Wars: The Video Game [GBA EMULATED]": {
         "url": "https://cdn.jsdelivr.net/gh/brooklynruff/d@main/emulation/files/gba/lswtvg_2.xml",
         "img": "legostarwars.jpeg"
     }
@@ -1013,7 +1013,7 @@
         "Super Smash Bros. [N64 EMULATED]",
         "Mega Man X [SNES EMULATED]",
         "Welcome to Animal Crossing: Wild World [NDS EMULATED]",
-        "Lego Star Wars: The Video Game [NDS EMULATED]"
+        "Lego Star Wars: The Video Game [GBA EMULATED]"
     ]
   }
 }
